# sfd

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
src/: example.c  sfd.c  sfd.h
